# nmdc-server

./: .docker-env  .dockerignore  .env.example  .env.production  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .gitmodules  Dockerfile  Dockerfile.worker  INGEST.md  LICENSE  MANIFEST.in  README.md  create_database.py  deploy.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  log_config.yaml  mypy.ini  package.json  prestart.sh  pyproject.toml  setup.cfg  setup.py  start.sh  tox.ini  vue.config.js
.github/docs/: mongo_ssh_tunnel.md
.github/workflows/: berkeley-image.yml  deploy.yml  dockerhub.yml  main.yml  server.yml
auth/: README.md
data/: Hess_emsl_analysis_data_objects.json  Hess_metaproteomic_analysis_activities.json  Stegen_emsl_analysis_data_objects.json  Stegen_metaproteomic_analysis_activities.json  biosample.json  data_objects.json  emsl_data_objects.json  emsl_omics_processing.json  faa_fna_fastq_data_objects.json  gold_omics_processing.json  gold_study.json  metagenome_annotation_activities.json  metagenome_annotation_data_objects.json  metagenome_assembly_activities.json  metagenome_assembly_data_objects.json  readQC_activities.json  readQC_data_objects.json
docs/: data_portal.md  development.md  index.html  local_ingest.md  study_page_annotations.md  submission_data.md
docs/css/: app.10645718.css  chunk-vendors.46c4b1c3.css
docs/js/: app.81734de6.js  app.81734de6.js.map  app.e7e9853e.js  app.e7e9853e.js.map  app.f9e46669.js  app.f9e46669.js.map  chunk-vendors.9720223a.js  chunk-vendors.9720223a.js.map
migrations/: env.py  script.py.mako
migrations/versions/: 192baf04f325_empty_string_fields.py  475bed7659be_add_study_objective.py  4b85f324a361_truncate_table.py  4df378f8af6c_add_extra_columns.py  636691171eac_envo_ancestors.py  8f03f0fac12b_initial.py  8f03f0fac12b_ko_term.py  900d22d746e9_add_envo_table.py  af4f8dddfdd1_join_envo_tables.py  d3136b720704_add_study_related_tables.py  de2aa100425d_add_study_fields.py  f2b5112d8af0_add_lat_long.py  ff0a31bb7f64_mixs_schema.py
nmdc_server/: __init__.py  aggregations.py  alembic.ini  api.py  app.py  attribute_units.py  auth.py  auth_middleware.py  authorization.polar  binning.py  bulk_download_readme.md  bulk_download_schema.py  celery.py  cli.py  config.py  crud.py  data_object_filters.py  database.py  env_triad.py  errors.py  fakes.py  filters.py  github.py  jobs.py  kegg.py  logger.py  metadata.py  models.py  multiomics.py  pagination.py  query.py  query_fields.py  rocrate.py  schemas.py  schemas_submission.py  static_files.py  storage.py  table.py  utils.py
nmdc_server/ingest/: all.py  biosample.py  biosample_related_document.py  common.py  data_object.py  denormalize.py  doi.py  envo.py  errors.py  kegg.py  lock.py  logger.py  mongo_data_portal.md  omics_processing.py  ontology.py  pipeline.py  project.py  search_index.py  study.py  study_additional.json
nmdc_server/ingest/data/: kegg_module_ko_terms.tab.txt  ko_term_modules.tab.txt  ko_term_pathways.tab.txt
nmdc_server/migrations/: env.py
nmdc_server/migrations/versions/: 04137e962f0f_add_multiomics.py  0464d245742c_metap_peptide.py  09a705b0bc00_submission_images.py  0a3edcd64e1f_add_study_image.py  0cb677fa8d5e_update_jgi_submission-schema_slot_names.py  0f5df87fca3a_optional_doi.py  0f87ba7add08_lock_submissions.py  0ff690fb929d_add_study_name_and_template_columns_to_.py  11a7decdcc60_massive_identifiers.py  122480213c73_add_metatranscriptome_gene_function.py  15fee92ce478_add_ingest_lock.py  18127fd43a8b_add_country_to_shipper_info.py  18e52534911c_remove_gene_function_count.py  1d0cfa3cb7b5_drop_ingest_lock.py  1de891717fc0_multivalued_dois.py  1f47b94a6692_pi_image.py  20e30659b752_search_index_counts.py  224d48e7ebe9_add_pfam_go_mappings.py  224db8f7e8df_update_assembly_col_types.py  23e0702d2321_multi_tab_metadata_submission_format.py  23ef8096759e_update_submissionstatus_values2.py  28f470a18472_envo_tree.py  2cc22d82c9ce_add_generic_ontology_tables.py  2d175e58c0ae_remove_submission_metadata_templates.py  2ec2d0b4f840_create_data_object_id_idx.py  317274ad8137_add_cog_mappings.py  34a0480316fa_update_study_fts_index.py  3a68ea418acf_remove_used_and_best_protein_columns.py  3b2b6e524b47_wfe_dgn_many_to_many.py  3be1e63ce89b_.py  3dce13053a91_.py  (+108 more)
nmdc_server/swagger_ui/: helpers.py
nmdc_server/validation/: env_triad.py
public/: index.html
scripts/: create_database.py  update_nmdc_submission_schema.py  upset.py
scripts/docker/: init.sql
src/: App.vue  colors.js  encoding.js  main.js  util.js
src/components/: AttributeList.vue  EcosystemChart.vue  EcosystemSankey.vue  FacetChart.vue  FacetedSearch.vue  LocationMap.vue  Project.vue  Sample.vue  SearchResults.vue  Study.vue  VisPlayground.vue  Welcome.vue  encoding.js
src/data/: DataAPI.js  api.js  biosample.json  data_objects.json  ficus_project_files_v1.tsv  omics_processing.json  project.json  study.json  study_additional.json
src/plugins/: vuetify.js
static/submission_schema/: GoldEcosystemTree.json  submission_schema.json
tests/: conftest.py  fakes.py  test_app.py  test_auth.py  test_binning.py  test_download.py  test_env_triad_validation.py  test_envo.py  test_ingest_omics_processing.py  test_metadata.py  test_ontology_etl.py  test_pagination.py  test_query.py  test_storage.py  test_submission.py  test_submission_timestamps.py  test_utils.py
tests/data/: envo_ancestors.csv  envo_terms.csv
web/: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  README.md  babel.config.js  components.d.ts  env.d.ts  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package.json  start.sh  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.mjs  vite.config.mts  vue.config.js
web-vue27/: .dockerignore  .gitignore  vue.config.js
web-vue27/src/: menus.ts
web/public/: 404.html  index.html  manifest.json
web/src/: App.vue  colors.js  components.d.ts  definitions.ts  encoding.js  encoding.ts  main.js  main.ts  menus.ts  router.ts  schema.ts  shims-yaml.d.ts  typed-router.d.ts  types.ts  util.js  utils.ts
(+248 files in other folders)
