[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nmdc-server"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "alembic==1.13.3",
    "amqp==5.2.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.6.0",
    "appdirs==1.4.4",
    "arrow==1.3.0",
    "asttokens==2.4.1",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "authlib==1.3.2",
    "babel==2.16.0",
    "beautifulsoup4==4.12.3",
    "billiard==4.2.1",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "cfgraph==0.2.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "cryptography==43.0.1",
    "curies==0.9.2",  # transitive dependency
    "decorator==5.1.1",
    "deprecated==1.2.14",
    "dnspython==2.7.0",
    "editorconfig==0.12.4",
    "et-xmlfile==1.1.0",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "factory-boy==3.3.1",
    "faker==30.3.0",
    "fastapi[standard]==0.115.0",
    "flexcache==0.3",
    "flexparser==0.3.1",
    "fqdn==1.5.1",
    "ghp-import==2.1.0",
    "google-auth==2.40.3",
    "google-cloud-secret-manager==2.24.0",
    "google-cloud-storage==3.1.1",
    "graphviz==0.20.3",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "hbreader==0.9.1",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "importlib-metadata==4.12.0",
    "iniconfig==2.0.0",
    "ipython==8.18.1",
    "isodate==0.7.2",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "jsbeautifier==1.15.1",
    "json-flattener==0.1.9",
    "jsonasobj==1.3.1",
    "jsonasobj2==1.0.4",
    "jsonpatch==1.33",
    "jsonpath-ng==1.6.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "kombu==5.4.2",
    # Notes:
    # - Updated from `==1.8.5` to `==1.9.1` to be compatible with `nmdc-schema` version `11.7.0`.
    # - Chose version `==1.9.1`, specifically, because that is what `nmdc-runtime` currently uses.
    "linkml==1.9.1",
    "linkml-dataops==0.1.0",
    # Notes:
    # - Updated from `==1.8.3` to `==1.9.2` to be compatible with `linkml` version `1.9.1`.
    # - Chose version `==1.9.2`, specifically, because that is what `nmdc-runtime` currently uses.
    "linkml-runtime==1.9.2",
    "mako==1.3.5",
    "markdown==3.7",
    "markupsafe==3.0.1",
    "matplotlib-inline==0.1.7",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material==9.5.40",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-mermaid2-plugin==0.6.0",
    "mkdocs-redirects==1.2.1",
    "mypy==1.11.2",
    "mypy-extensions==1.0.0",
    "nmdc-schema==v11.14.0-rc.1",
    "nmdc-submission-schema==11.13.0",
    "nmdc-geoloc-tools==0.3.0",
    "openpyxl==3.1.5",
    "packaging==24.1",
    "paginate==0.5.7",
    "parse==1.20.2",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pint==0.24.3",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "ply==3.11",
    "prefixcommons==0.1.12",
    "prefixmaps==0.2.5",
    "prompt-toolkit==3.0.48",
    "psycopg2==2.9.9",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-settings==2.4.0",
    "pydantic-core==2.23.4",
    "pygments==2.18.0",
    "pyjsg==0.11.10",
    "pymdown-extensions==10.11.2",
    "pymongo==4.10.1",
    "pyparsing==3.1.4",
    "pyshex==0.8.1",
    "pyshexc==0.9.1",
    "pytest==8.3.3",
    "pytest-logging==2015.11.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytrie==0.4.0",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==0.1",
    "rdflib==6.2.0",
    "rdflib-jsonld==0.6.1",
    "rdflib-shim==1.0.3",
    "referencing==0.35.1",
    "regex==2024.9.11",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3987==1.3.8",
    "rpds-py==0.20.0",
    "ruamel-yaml==0.18.6",
    "ruamel-yaml-clib==0.2.8",
    "sentry-sdk==2.16.0",
    "setuptools==75.1.0",
    "shexjsg==0.8.2",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "sparqlslurper==0.5.1",
    "sparqlwrapper==2.0.0",
    "sqlalchemy>=2",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "starlette==0.38.6",
    "tomli==2.0.2",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241003",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "uri-template==1.3.0",
    "urllib3==2.2.3",
    "vine==5.1.0",
    "watchdog==5.0.3",
    "wcwidth==0.2.13",
    "webcolors==24.8.0",
    "wrapt==1.16.0",
    "zipp==3.20.2",
    "fastapi-debug-toolbar",
]

[project.scripts]
nmdc-server = "nmdc_server.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nmdc_server*"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py37']
exclude='\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist'

[tool.isort]
line_length = 100
profile = "black"
