[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nmdc-server"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "alembic",
    "authlib",
    # Use click<8.2.0 because that allows linkml (a transitive dependency) version 1.10.x to be used. This constraint
    # can be removed when linkml 1.11.0 is released, which will support click 8.2.0 and above.
    # See: https://github.com/linkml/linkml/issues/3239
    "click<8.2.0",
    "fastapi[standard]",
    "fastapi-debug-toolbar",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "httpx",
    "ipython",
    "itsdangerous",
    "linkml-runtime",
    "nmdc_api_utilities",
    "nmdc-metadata-suggestor-ai-tool==1.1.1",
    "nmdc-schema==11.18.0",
    "nmdc-submission-schema==11.18.1",
    "nmdc-geoloc-tools",
    "pint",
    "pydantic",
    "pydantic-settings",
    "pygments",
    "pymongo",
    "python-dateutil",
    "requests",
    "sentry-sdk",
    "sqlalchemy[postgresql]>=2",
    "sqlparse",
    "starlette",
    "traitlets",
    "urllib3",
]

[dependency-groups]
dev = [
    "pytest",
    "tox",
    "tox-uv",
    "tox-gh-actions",
    "factory-boy",
    "faker",
]
lint = [
    "black",
    "deptry",
    "mypy",
    "flake8",
    "flake8-isort",
    "pep8-naming",
    "sqlalchemy-stubs",
    "types-setuptools",
    "types-python-dateutil",
    "types-requests",
    "types-click",
]

[project.scripts]
nmdc-server = "nmdc_server.cli:cli"

[tool.deptry.per_rule_ignores]
DEP002 = [
    # itsdangerous is a extra dependency required for `SessionMiddleware` (from `starlette`) to work, but there is no
    # package extra specifically for it.
    # See: https://github.com/Kludex/starlette/blob/1.0.0/README.md#dependencies
    "itsdangerous",
    # nmdc-submission-schema is not directly imported, but static_files.py loads resource files from it.
    "nmdc-submission-schema",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nmdc_server*"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py312']
exclude='\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist'

[tool.isort]
line_length = 100
profile = "black"
